// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-28.emotion-28.emotion-28 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-13.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

.emotion-9.emotion-9 {
  font-weight: 400;
}

.emotion-8 {
  margin-left: 0.5rem !important;
}

<div
  class="emotion-31 emotion-0 emotion-1 fp-Box fp-RadioGroup"
  role="group"
>
  <div
    class="emotion-28 emotion-0 emotion-1 fp-Box fp-Set"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="world"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        Hello
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="me"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        This is
      </span>
    </label>
  </div>
</div>
`;

exports[`composition hook should return with RadioGroup props 1`] = `
Object {
  "children": <Set
    orientation="vertical"
    spacing="minor-2"
  >
    <Radio
      label="Hello"
      name="weather"
      value="world"
    />
    <Radio
      label="This is"
      name="weather"
      value="me"
    />
  </Set>,
  "className": "css-1fie8gx css-63it0p css-jwhr8m fp-Box fp-RadioGroup",
  "role": "group",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-RadioGroup"
  role="group"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-28.emotion-28.emotion-28 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-13.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

.emotion-9.emotion-9 {
  font-weight: 400;
}

.emotion-8 {
  margin-left: 0.5rem !important;
}

.emotion-33 {
  color: #574feb !important;
}

<div
  class="emotion-31 emotion-0 emotion-33 test fp-Box fp-RadioGroup"
  role="group"
>
  <div
    class="emotion-28 emotion-0 emotion-1 fp-Box fp-Set"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="world"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        Hello
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="me"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        This is
      </span>
    </label>
  </div>
</div>
`;

exports[`overrides RadioGroup.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-28.emotion-28.emotion-28 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-13.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

.emotion-9.emotion-9 {
  font-weight: 400;
}

.emotion-8 {
  margin-left: 0.5rem !important;
}

.emotion-31 {
  background-color: #ff0000;
}

<div
  class="emotion-31 emotion-0 emotion-1 fp-Box fp-RadioGroup"
  role="group"
>
  <div
    class="emotion-28 emotion-0 emotion-1 fp-Box fp-Set"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="world"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        Hello
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="me"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        This is
      </span>
    </label>
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-28.emotion-28.emotion-28 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-13.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

.emotion-9.emotion-9 {
  font-weight: 400;
}

.emotion-8 {
  margin-left: 0.5rem !important;
}

<div
  class="emotion-31 emotion-0 emotion-1 fp-Box fp-RadioGroup"
  role="group"
>
  <div
    class="emotion-28 emotion-0 emotion-1 fp-Box fp-Set"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="world"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        Hello
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="me"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        This is
      </span>
    </label>
  </div>
</div>
`;

exports[`props should render correctly for default value 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-28.emotion-28.emotion-28 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-13.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

.emotion-9.emotion-9 {
  font-weight: 400;
}

.emotion-8 {
  margin-left: 0.5rem !important;
}

<div
  class="emotion-31 emotion-0 emotion-1 fp-Box fp-RadioGroup"
  role="group"
>
  <div
    class="emotion-28 emotion-0 emotion-1 fp-Box fp-Set"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        checked=""
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="world"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        Hello
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="me"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        This is
      </span>
    </label>
  </div>
</div>
`;

exports[`props should render correctly for disabled field 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-28.emotion-28.emotion-28 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-13.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

.emotion-9.emotion-9 {
  font-weight: 400;
}

.emotion-8 {
  margin-left: 0.5rem !important;
}

<div
  class="emotion-31 emotion-0 emotion-1 fp-Box fp-RadioGroup"
  role="group"
>
  <div
    class="emotion-28 emotion-0 emotion-1 fp-Box fp-Set"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        disabled=""
        id="radio"
        name="weather"
        type="radio"
        value="world"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        Hello
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="me"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        This is
      </span>
    </label>
  </div>
</div>
`;

exports[`props should render correctly for disabled fields 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-28.emotion-28.emotion-28 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-13.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

.emotion-9.emotion-9 {
  font-weight: 400;
}

.emotion-8 {
  margin-left: 0.5rem !important;
}

<div
  class="emotion-31 emotion-0 emotion-1 fp-Box fp-RadioGroup"
  role="group"
>
  <div
    class="emotion-28 emotion-0 emotion-1 fp-Box fp-Set"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        disabled=""
        id="radio"
        name="weather"
        type="radio"
        value="world"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        Hello
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        disabled=""
        id="radio"
        name="weather"
        type="radio"
        value="me"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        This is
      </span>
    </label>
  </div>
</div>
`;

exports[`props should render correctly for horizontal fields 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-13.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

.emotion-9.emotion-9 {
  font-weight: 400;
}

.emotion-8 {
  margin-left: 0.5rem !important;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-28.emotion-28.emotion-28 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

<div
  class="emotion-31 emotion-0 emotion-1 fp-Box fp-RadioGroup"
  role="group"
>
  <div
    class="emotion-28 emotion-0 emotion-1 fp-Box fp-Set"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="world"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        Hello
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="me"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        This is
      </span>
    </label>
  </div>
</div>
`;

exports[`props should render correctly for state danger 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-28.emotion-28.emotion-28 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-13.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-9.emotion-9 {
  font-weight: 400;
}

.emotion-8 {
  margin-left: 0.5rem !important;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-RadioIcon {
  border-color: #da1717;
}

.emotion-2:not(:checked) + .fp-RadioIcon {
  box-shadow: #fbe8e8 0px 0px 0px 3px !important;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

<div
  class="emotion-31 emotion-0 emotion-1 fp-Box fp-RadioGroup"
  role="group"
>
  <div
    class="emotion-28 emotion-0 emotion-1 fp-Box fp-Set"
  >
    <label
      aria-describedby="label"
      aria-invalid="true"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="world"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        Hello
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="true"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="me"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        This is
      </span>
    </label>
  </div>
</div>
`;

exports[`props should render correctly for state success 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-28.emotion-28.emotion-28 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-13.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-9.emotion-9 {
  font-weight: 400;
}

.emotion-8 {
  margin-left: 0.5rem !important;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-RadioIcon {
  border-color: #0a7d33;
}

.emotion-2:not(:checked) + .fp-RadioIcon {
  box-shadow: #e7f2eb 0px 0px 0px 3px !important;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

<div
  class="emotion-31 emotion-0 emotion-1 fp-Box fp-RadioGroup"
  role="group"
>
  <div
    class="emotion-28 emotion-0 emotion-1 fp-Box fp-Set"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="world"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        Hello
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="me"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        This is
      </span>
    </label>
  </div>
</div>
`;

exports[`props should render correctly for state warning 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-28.emotion-28.emotion-28 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-13.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-9.emotion-9 {
  font-weight: 400;
}

.emotion-8 {
  margin-left: 0.5rem !important;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-RadioIcon {
  border-color: #ed9c22;
}

.emotion-2:not(:checked) + .fp-RadioIcon {
  box-shadow: #fdf5e9 0px 0px 0px 3px !important;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

<div
  class="emotion-31 emotion-0 emotion-1 fp-Box fp-RadioGroup"
  role="group"
>
  <div
    class="emotion-28 emotion-0 emotion-1 fp-Box fp-Set"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="world"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        Hello
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="me"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        This is
      </span>
    </label>
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-28.emotion-28.emotion-28 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-13.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

.emotion-9.emotion-9 {
  font-weight: 400;
}

.emotion-8 {
  margin-left: 0.5rem !important;
}

<div
  class="emotion-31 emotion-0 emotion-1 fp-Box fp-RadioGroup"
  role="group"
>
  <div
    class="emotion-28 emotion-0 emotion-1 fp-Box fp-Set"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="world"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        Hello
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="me"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        This is
      </span>
    </label>
  </div>
</div>
`;

exports[`theming RadioGroup.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-28.emotion-28.emotion-28 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-13.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

.emotion-9.emotion-9 {
  font-weight: 400;
}

.emotion-8 {
  margin-left: 0.5rem !important;
}

.emotion-31 {
  background-color: #ff0000;
}

<div
  class="emotion-31 emotion-0 emotion-1 fp-Box fp-RadioGroup"
  role="group"
>
  <div
    class="emotion-28 emotion-0 emotion-1 fp-Box fp-Set"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="world"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        Hello
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
        id="radio"
        name="weather"
        type="radio"
        value="me"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
        for="radio"
        id="label"
      >
        This is
      </span>
    </label>
  </div>
</div>
`;
